--- a/robot_tennis_controller/package.xml
+++ b/robot_tennis_controller/package.xml
@@ -4,17 +4,15 @@
   <name>robot_tennis_controller</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="quentin.brateau@ensta-bretagne.org">quentin</maintainer>
+  <maintainer email="gwendal.priser@ensta-bretagne.org">gwen</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
-  
   <export>
-    <build_type>ament_cmake</build_type>
-    <exec_depend>rclpy</exec_depend>
-    <exec_depend>std_msgs</exec_depend>
+    <build_type>ament_python</build_type>
   </export>
 </package>
